[package]
name = "couchdb-dump"
version = "0.1.0"
authors = ["Justin Guckes <justin.guckes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.1", features = ["yaml"] }
indicatif = "0.15.0"
console = "0.11.3"
serde = "1.0.114"
serde_json = "1.0"
reqwest = "0.9.15"
