[package]
name = "couchdb-dump"
version = "0.1.0"
authors = ["Justin Guckes <justin.guckes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.1", features = ["yaml"] }
indicatif = "0.15.0"
console = "0.11.3"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2.21", features = ["full"] }
reqwest = { version = "0.10.7", features = ["json"] }
async-trait = "*"
openssl = { version = "0.10", features = ["vendored"] }
